--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
 	"files.associations": {
 		"vector": "cpp",
-		"iostream": "cpp"
+		"iostream": "cpp",
+		"ostream": "c"
 	}
 }
